--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,7 @@
   <main>
     <section>
       <h2>Giới thiệu ngắn</h2>
-      <p>Mình là Phạm Quang Hà <strong>,Học viên</strong> của môn Web Design and Development. Đây là trang demo đầu tiên.</p>
+      <p>Mình là <strong>Phạm Quang Hà</strong>học viên của môn Web Design and Development. Đây là trang demo đầu tiên.</p>
     </section>
 
     <section>
