--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-this is my personal GitHub Pages site
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <p>This is the first exercise page.</p>
+    <p>My name is Phạm Quang Hà</p>
+</body>
+</html>
