--- a/Week3/index.html
+++ b/Week3/index.html
@@ -7,28 +7,31 @@
 <body>
   <h1>Fruits</h1>
 
+  <!-- Paragraph 1 -->
   <p>
-    <img src="apple.png" alt="Apple" width="100">
-    <img src="banana.png" alt="Banana" width="100">
-    <img src="kiwi.png" alt="Kiwi" width="100">
-    <img src="orange.png" alt="Orange" width="100">
-    <img src="apple.png" alt="Apple" width="100">
+    <img src="images/apple.png" alt="Apple" width="100">
+    <img src="images/banana.png" alt="Banana" width="100">
+    <img src="images/kiwi.png" alt="Kiwi" width="100">
+    <img src="images/orange.png" alt="Orange" width="100">
+    <img src="images/apple.png" alt="Apple" width="100">
   </p>
 
+  <!-- Paragraph 2 -->
   <p>
-    <img src="banana.png" alt="Banana" width="100">
-    <img src="kiwi.png" alt="Kiwi" width="100">
-    <img src="orange.png" alt="Orange" width="100">
-    <img src="apple.png" alt="Apple" width="100">
-    <img src="banana.png" alt="Banana" width="100">
+    <img src="images/banana.png" alt="Banana" width="100">
+    <img src="images/kiwi.png" alt="Kiwi" width="100">
+    <img src="images/orange.png" alt="Orange" width="100">
+    <img src="images/apple.png" alt="Apple" width="100">
+    <img src="images/banana.png" alt="Banana" width="100">
   </p>
 
+  <!-- Paragraph 3 -->
   <p>
-    <img src="kiwi.png" alt="Kiwi" width="100">
-    <img src="orange.png" alt="Orange" width="100">
-    <img src="apple.png" alt="Apple" width="100">
-    <img src="banana.png" alt="Banana" width="100">
-    <img src="orange.png" alt="Orange" width="100">
+    <img src="images/kiwi.png" alt="Kiwi" width="100">
+    <img src="images/orange.png" alt="Orange" width="100">
+    <img src="images/apple.png" alt="Apple" width="100">
+    <img src="images/banana.png" alt="Banana" width="100">
+    <img src="images/orange.png" alt="Orange" width="100">
   </p>
 </body>
 </html>
