--- a/Week3/index.html
+++ b/Week3/index.html
@@ -9,29 +9,28 @@
 
   <!-- Paragraph 1 -->
   <p>
-    <img src="images/apple.png" alt="Apple" width="100">
-    <img src="images/banana.png" alt="Banana" width="100">
-    <img src="images/kiwi.png" alt="Kiwi" width="100">
-    <img src="images/orange.png" alt="Orange" width="100">
-    <img src="images/apple.png" alt="Apple" width="100">
+    <img src="images/apple.png" alt="apple" width="100">
+    <img src="images/banana.png" alt="aanana" width="100">
+    <img src="images/kiwi.png" alt="kiwi" width="100">
+    <img src="images/orange.png" alt="orange" width="100">
+    <img src="images/apple.png" alt="apple" width="100">
   </p>
 
   <!-- Paragraph 2 -->
   <p>
-    <img src="images/banana.png" alt="Banana" width="100">
-    <img src="images/kiwi.png" alt="Kiwi" width="100">
-    <img src="images/orange.png" alt="Orange" width="100">
-    <img src="images/apple.png" alt="Apple" width="100">
-    <img src="images/banana.png" alt="Banana" width="100">
-  </p>
+    <img src="images/apple.png" alt="apple" width="100">
+    <img src="images/banana.png" alt="aanana" width="100">
+    <img src="images/kiwi.png" alt="kiwi" width="100">
+    <img src="images/orange.png" alt="orange" width="100">
+    <img src="images/apple.png" alt="apple" width="100">
 
   <!-- Paragraph 3 -->
   <p>
-    <img src="images/kiwi.png" alt="Kiwi" width="100">
-    <img src="images/orange.png" alt="Orange" width="100">
-    <img src="images/apple.png" alt="Apple" width="100">
-    <img src="images/banana.png" alt="Banana" width="100">
-    <img src="images/orange.png" alt="Orange" width="100">
+    <img src="images/apple.png" alt="apple" width="100">
+    <img src="images/banana.png" alt="aanana" width="100">
+    <img src="images/kiwi.png" alt="kiwi" width="100">
+    <img src="images/orange.png" alt="orange" width="100">
+    <img src="images/apple.png" alt="apple" width="100">
   </p>
 </body>
 </html>
