--- a/welcome.html
+++ b/welcome.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome</title>
+  <meta charset="UTF-8">
+  <title>Welcome</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is the first exercise page.</p>
-    <p>My name is Phạm Quang Hà</p>
+  <p>I am learning <strong>HTML</strong> and <strong>CSS</strong>!</p>
 </body>
 </html>
