--- a/Week3/wiki-page.html
+++ b/Week3/wiki-page.html
@@ -8,31 +8,25 @@
   <h1>The Brown Bear</h1>
 
   <p>
-    The <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">Brown Bear</a> 
-    (Ursus arctos) is a large bear species found across Eurasia and North America. 
-    It is known for its strength and adaptability.
+    The <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">brown bear</a>
+    (Ursus arctos) is native to parts of northern Eurasia and North America.
   </p>
 
   <img src="images/bear.jpg" alt="Brown Bear" width="300">
 
-  <h2>Brown Bear Characteristics</h2>
-  <ul>
-    <li>Thick fur coat</li>
-    <li>Large body size</li>
-    <li>Omnivorous diet</li>
-    <li>Excellent swimmers</li>
-  </ul>
-
-  <h2>Subspecies (Ordered List)</h2>
+  <h2>Species</h2>
   <ol>
-    <li>Eurasian Brown Bear</li>
-    <li>Grizzly Bear</li>
-    <li>Kodiak Bear</li>
-    <li>Syrian Brown Bear</li>
+    <li>Arctos</li>
+    <li>Collarus</li>
+    <li>Horribilis</li>
+    <li>Nelsoni (extinct)</li>
   </ol>
 
-  <p>
-    Brown bears play an important role in ecosystems and have cultural significance in many regions.
-  </p>
+  <h2>Features</h2>
+  <ul>
+    <li>Countries with large brown bear populations include Russia, the United States, and Canada.</li>
+    <li>The brown bear's range includes parts of Europe, Asia, and North America.</li>
+    <li>Brown bears can weigh up to 1,500 pounds.</li>
+  </ul>
 </body>
 </html>
