--- a/Week3/wiki-page.html
+++ b/Week3/wiki-page.html
@@ -4,29 +4,39 @@
   <meta charset="UTF-8">
   <title>The Brown Bear</title>
 </head>
-<body>
+<body style="background-color: black; color: white; font-family: Arial, sans-serif;">
+
   <h1>The Brown Bear</h1>
 
   <p>
-    The <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">brown bear</a>
-    (Ursus arctos) is native to parts of northern Eurasia and North America.
+    The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. 
+    Its conservation status is currently "Least Concern." 
+    There are many subspecies within the brown bear species, 
+    including the Atlas bear and the Himalayan brown bear.
   </p>
 
-  <img src="images/bear.jpg" alt="Brown Bear" width="300">
+  <p>
+    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank" style="color: yellow; font-weight: bold; text-decoration: none;">
+      Learn More
+    </a>
+  </p>
 
-  <h2>Species</h2>
-  <ol>
+  <p>Here are some bear species:</p>
+  <ul>
     <li>Arctos</li>
     <li>Collarus</li>
     <li>Horribilis</li>
     <li>Nelsoni (extinct)</li>
+  </ul>
+
+  <p>The following countries have the largest populations of brown bears:</p>
+  <ol>
+    <li>Russia</li>
+    <li>United States</li>
+    <li>Canada</li>
   </ol>
 
-  <h2>Features</h2>
-  <ul>
-    <li>Countries with large brown bear populations include Russia, the United States, and Canada.</li>
-    <li>The brown bear's range includes parts of Europe, Asia, and North America.</li>
-    <li>Brown bears can weigh up to 1,500 pounds.</li>
-  </ul>
+  <img src="images/bear.jpg" alt="Brown Bear" width="300">
+
 </body>
 </html>
