--- a/Week3/wiki-page.html
+++ b/Week3/wiki-page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>The Brown Bear</title>
 </head>
-<body style="background-color: black; color: white; font-family: Arial, sans-serif;">
+<body style="background-color: white; color: black; font-family: Arial, sans-serif;">
 
   <h1>The Brown Bear</h1>
 
