--- a/Week3/wiki-page.html
+++ b/Week3/wiki-page.html
@@ -16,7 +16,7 @@
   </p>
 
   <p>
-    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank" style="color: yellow; font-weight: bold; text-decoration: none;">
+    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank" style="color: rgb(0, 179, 255); font-weight: bold; text-decoration: none;">
       Learn More
     </a>
   </p>
