--- a/week4/page.html
+++ b/week4/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Page</title>
+  <title>My Blog</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,8 +10,9 @@
   <nav id="topmenu">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Articles</a></li>
-      <li><a href="#">News</a></li>
+      <li><a href="#">Tutorials</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Newsletter</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -21,25 +22,25 @@
     <section>
       <article>
         <header>
-          <h1>Just another day</h1>
-          <p>Written by Admin</p>
+          <h1>Just Another Day</h1>
+          <p>Written by Christina on January 11th</p>
         </header>
-        <p>This is my second blog post. Here is some text about my day.</p>
+        <p>This is my second blog entry, and I just wanted to check in on you</p>
       </article>
 
       <article>
         <header>
-          <h1>My first article</h1>
-          <p>Written by Admin</p>
+          <h1>My First Blog Entry</h1>
+          <p>Written by Christina on January 10th</p>
         </header>
-        <p>This is my first blog post. Welcome to my website!</p>
+        <p>I’m so happy to write my first blog entry – yay!</p>
       </article>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>&copy; 2025 My Blog. All rights reserved.</p>
   </footer>
 </body>
 </html>
