--- a/week5/CV.html
+++ b/week5/CV.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>John Doe - CV</title>
+  <title>Quang Hà - CV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
