--- a/week6/BT3.html
+++ b/week6/BT3.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>BT3 - Left Menu</title>
-  <link rel="stylesheet" href="LeftMenu.css">
+  <title>Product List CSS3</title>
+  <style>
+    .product {
+      width: 200px;
+      border: 1px solid gray;
+      padding: 10px;
+      border-radius: 8px;
+      text-align: center;
+      float: left;
+      margin: 10px;
+      box-shadow: 2px 2px 5px #aaa;
+    }
+    .product img {
+      width: 100%;
+      border-radius: 8px;
+    }
+    .product:hover {
+      background-color: #e6f7ff;
+    }
+  </style>
 </head>
 <body>
-  <div class="left-menu">
-    <h2>Navigation</h2>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <h2>Product List (Using CSS3)</h2>
+
+  <div class="product">
+    <img src="images/product1.jpg" alt="Product 1">
+    <h3>Product 1</h3>
+    <p>$20</p>
+  </div>
+
+  <div class="product">
+    <img src="images/product2.jpg" alt="Product 2">
+    <h3>Product 2</h3>
+    <p>$25</p>
+  </div>
+
+  <div class="product">
+    <img src="images/product3.jpg" alt="Product 3">
+    <h3>Product 3</h3>
+    <p>$30</p>
   </div>
 </body>
 </html>
