--- a/week6/BT2.html
+++ b/week6/BT2.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>BT2 - Product List & Menu</title>
-  <link rel="stylesheet" href="BT2.css">
+  <title>Odd and Even Example</title>
+  <style>
+    li:nth-child(odd) {
+      background-color: #f2f2f2;
+    }
+    li:nth-child(even) {
+      background-color: #d9edf7;
+    }
+    li:hover {
+      background-color: yellow;
+    }
+  </style>
 </head>
 <body>
-  <h1>Product List (CSS3)</h1>
-
-  <div class="product-list">
-    <div class="product">
-      <img src="images/product1.jpg" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>$20</p>
-    </div>
-    <div class="product">
-      <img src="images/product2.jpg" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>$25</p>
-    </div>
-    <div class="product">
-      <img src="images/product3.jpg" alt="Product 3">
-      <h3>Product 3</h3>
-      <p>$30</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <h2>Extra: Gradient Menu</h2>
-  <nav class="gradient-menu">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <h2>Recognize Odd and Even Elements</h2>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+    <li>Item 6</li>
+  </ul>
 </body>
 </html>
