--- a/week7/BT1.html
+++ b/week7/BT1.html
@@ -29,19 +29,19 @@
     <h2>Product List (Using CSS3)</h2>
 
     <div class="product">
-        <img src="images/product1.jpg" alt="Product 1">
+        <img src="images/daisy.jpg" alt="Product 1">
         <h3>Product 1</h3>
         <p>$20</p>
     </div>
 
     <div class="product">
-        <img src="images/product2.jpg" alt="Product 2">
+        <img src="images/rose.jpg" alt="Product 2">
         <h3>Product 2</h3>
         <p>$25</p>
     </div>
 
     <div class="product">
-        <img src="images/product3.jpg" alt="Product 3">
+        <img src="images/tulip.jpg" alt="Product 3">
         <h3>Product 3</h3>
         <p>$30</p>
     </div>
