--- a/week7/BT1.html
+++ b/week7/BT1.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h2>Product List (Using CSS3)</h2>
+    <h2>Product List </h2>
 
     <div class="product">
         <img src="images/daisy.jpg" alt="Product 1">
