--- a/week7/BT2.html
+++ b/week7/BT2.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Left Menu</title>
-    <link rel="stylesheet" href="css/LeftMenu.css">
+    <meta charset="utf-8">
+    <title>Left menu</title>
+    <link rel="stylesheet" type="text/css" href="css/LeftMenu.css" />
 </head>
 <body>
-    <div id="menu">
-        <h2>Menu</h2>
+    <div class="menu">
+        <div>menu</div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li>home</li>
+            <li>categories</li>
+            <li>contact</li>
+            <li>about us</li>
         </ul>
     </div>
 </body>
