--- a/week7/BT1.html
+++ b/week7/BT1.html
@@ -1,49 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Product List CSS3</title>
-    <style>
-        .product {
-            width: 200px;
-            border: 2px solid gray;
-            padding: 10px;
-            border-radius: 8px;
-            text-align: center;
-            float: left;
-            margin: 10px;
-            box-shadow: 2px 2px 5px #aaa;
-        }
-
-        .product img {
-            width: 100%;
-            border-radius: 8px;
-        }
-
-        .product:hover {
-            background-color: #e6f7ff;
-        }
+  <head>
+    <meta charset="utf-8" />
+    <title>Create product list with CSS3</title>
+    <style type="text/css">
+      .ProductDetails {
+        display: none;
+      }
+      .Product img {
+        width: 150px;
+        height: 150px;
+        border-radius: 20px;
+        box-shadow: 5px 5px 10px #aaa;
+      }
+      .ProductName {
+        font-weight: bold;
+      }
+      .ProductPrice {
+        font-style: italic;
+      }
+      .ProductPrice:before {
+        content: " - ";
+      }
+      .Product {
+        text-align: center;
+        width: 150px;
+        margin: 0px 20px;
+        float: left;
+        cursor: pointer;
+      }
+      .Product:hover .ProductDetails {
+        display: block;
+      }
     </style>
-</head>
-<body>
-    <h2>Product List </h2>
+  </head>
 
-    <div class="product">
-        <img src="images/daisy.jpg" alt="Product 1">
-        <h3>Product 1</h3>
-        <p>$20</p>
-    </div>
+  <body>
+    <div>
+      <div class="Product">
+        <img src="rose.jpg" />
+        <div class="ProductDetails">
+          <span class="ProductName">Rose</span>
+          <span class="ProductPrice">1.5$</span>
+        </div>
+      </div>
 
-    <div class="product">
-        <img src="images/rose.jpg" alt="Product 2">
-        <h3>Product 2</h3>
-        <p>$25</p>
-    </div>
+      <div class="Product">
+        <img src="tulip.jpg" />
+        <div class="ProductDetails">
+          <span class="ProductName">Tulip</span>
+          <span class="ProductPrice">2.0$</span>
+        </div>
+      </div>
 
-    <div class="product">
-        <img src="images/tulip.jpg" alt="Product 3">
-        <h3>Product 3</h3>
-        <p>$30</p>
+      <div class="Product">
+        <img src="daisy.jpg" />
+        <div class="ProductDetails">
+          <span class="ProductName">Daisy</span>
+          <span class="ProductPrice">1.0$</span>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
