--- a/week7/BT1.html
+++ b/week7/BT1.html
@@ -38,7 +38,7 @@
   <body>
     <div>
       <div class="Product">
-        <img src="rose.jpg" />
+        <img src="images/rose.jpg" />
         <div class="ProductDetails">
           <span class="ProductName">Rose</span>
           <span class="ProductPrice">1.5$</span>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="Product">
-        <img src="tulip.jpg" />
+        <img src="images/tulip.jpg" />
         <div class="ProductDetails">
           <span class="ProductName">Tulip</span>
           <span class="ProductPrice">2.0$</span>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="Product">
-        <img src="daisy.jpg" />
+        <img src="images/daisy.jpg" />
         <div class="ProductDetails">
           <span class="ProductName">Daisy</span>
           <span class="ProductPrice">1.0$</span>
