--- a/week8/week8.html
+++ b/week8/week8.html
@@ -1,16 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Multiple-Line Input Control</title>
+  <meta charset="UTF-8">
+  <title>John Doe - CV</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form>
-<input type="color" name="favcolor">
-<input type="date" name="bday">
-<input type="email" name="email">
-<input type="number" name="quantity" min="1" max="5">
-<input type="range" name="points" min="0" max="10">
-<input type="tel" name="usrtel">
-</form>
+
+  <!-- Navigation (giữ nguyên của bạn) -->
+  <nav id="topmenu">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- About -->
+  <section id="about" class="container">
+    <h1>John Doe</h1>
+    <h3>Web Developer</h3>
+    <p>A passionate web developer with experience in HTML, CSS, and JavaScript.</p>
+  </section>
+
+  <hr>
+
+  <!-- Education -->
+  <section id="education" class="container">
+    <h2>Education</h2>
+    <h3>Bachelor of Science in Computer Science</h3>
+    <p>University of Technology | 2016 - 2020</p>
+
+    <h3>High School Diploma</h3>
+    <p>City High School | 2012 - 2016</p>
+  </section>
+
+  <hr>
+
+  <!-- Work Experience -->
+  <section id="experience" class="container">
+    <h2>Work Experience</h2>
+
+    <article>
+      <h3>Junior Web Developer</h3>
+      <p>Tech Solutions Inc. | 2020 - Present</p>
+      <ul>
+        <li>Developed and maintained company websites</li>
+        <li>Collaborated with design team to implement user interfaces</li>
+        <li>Optimized websites for maximum speed and scalability</li>
+      </ul>
+    </article>
+
+    <article>
+      <h3>Web Development Intern</h3>
+      <p>Digital Creations | Summer 2019</p>
+      <ul>
+        <li>Assisted in website development projects</li>
+        <li>Created responsive designs for mobile platforms</li>
+        <li>Participated in client meetings and presentations</li>
+      </ul>
+    </article>
+  </section>
+
+  <hr>
+
+  <!-- Skills -->
+  <section id="skills" class="container">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Responsive Design</li>
+      <li>Problem Solving</li>
+      <li>Team Collaboration</li>
+    </ul>
+  </section>
+
+  <hr>
+
+  <!-- Contact + Form -->
+  <section id="contact" class="container">
+    <h2>Contact Information</h2>
+
+    <div class="contact-grid">
+      <div class="contact-details">
+        <p><strong>Email:</strong> john.doe@email.com</p>
+        <p><strong>Phone:</strong> (123) 456-7890</p>
+        <p><strong>LinkedIn:</strong> linkedin.com/in/johndoe</p>
+        <p><strong>GitHub:</strong> github.com/johndoe</p>
+      </div>
+
+      <!-- FORM: đổi action nếu dùng dịch vụ gửi form -->
+      <form class="contact-form" action="#" method="post" novalidate>
+        <h3>Send me a message</h3>
+
+        <label for="name">Full name</label>
+        <input id="name" name="name" type="text" placeholder="Your name" required>
+
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" placeholder="you@example.com" required>
+
+        <label for="phone">Phone</label>
+        <input id="phone" name="phone" type="tel" placeholder="+84 9xx xxx xxx">
+
+        <label for="subject">Subject</label>
+        <input id="subject" name="subject" type="text" placeholder="Subject">
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" placeholder="Write your message..." required></textarea>
+
+        <div class="form-row">
+          <button type="submit" class="btn">Send Message</button>
+          <button type="reset" class="btn btn-secondary">Reset</button>
+        </div>
+
+        <p class="form-note">* Your details will not be shared. This is a demo form.</p>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 John Doe. All rights reserved.</p>
+    <p>Created using HTML and CSS.</p>
+  </footer>
+
 </body>
 </html>
