--- a/week8/week8.html
+++ b/week8/week8.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>John Doe - CV</title>
+  <title>Phạm Quang Hà - CV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navigation (giữ nguyên của bạn) -->
+  <!-- Navigation -->
   <nav id="topmenu">
     <ul>
       <li><a href="#about">About</a></li>
@@ -15,14 +15,15 @@
       <li><a href="#experience">Experience</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact-form">Contact Form</a></li>
     </ul>
   </nav>
 
   <!-- About -->
   <section id="about" class="container">
-    <h1>John Doe</h1>
-    <h3>Web Developer</h3>
-    <p>A passionate web developer with experience in HTML, CSS, and JavaScript.</p>
+    <h1>Phạm Quang Hà</h1>
+    <h3>Student of Web Developer</h3>
+    <p>A passionate student web developer with experience in HTML, CSS, and JavaScript.</p>
   </section>
 
   <hr>
@@ -30,38 +31,25 @@
   <!-- Education -->
   <section id="education" class="container">
     <h2>Education</h2>
-    <h3>Bachelor of Science in Computer Science</h3>
-    <p>University of Technology | 2016 - 2020</p>
+    <h3>Study MIS</h3>
+    <p>International School</p>
 
     <h3>High School Diploma</h3>
-    <p>City High School | 2012 - 2016</p>
+    <p>Lương Thế Vinh High School | 2019–2022</p>
   </section>
 
   <hr>
 
-  <!-- Work Experience -->
+  <!-- Experience -->
   <section id="experience" class="container">
     <h2>Work Experience</h2>
-
-    <article>
-      <h3>Junior Web Developer</h3>
-      <p>Tech Solutions Inc. | 2020 - Present</p>
-      <ul>
-        <li>Developed and maintained company websites</li>
-        <li>Collaborated with design team to implement user interfaces</li>
-        <li>Optimized websites for maximum speed and scalability</li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>Web Development Intern</h3>
-      <p>Digital Creations | Summer 2019</p>
-      <ul>
-        <li>Assisted in website development projects</li>
-        <li>Created responsive designs for mobile platforms</li>
-        <li>Participated in client meetings and presentations</li>
-      </ul>
-    </article>
+    <h3>Junior Web Developer</h3>
+    <p>Tech Solutions Inc. | 2023 – Present</p>
+    <ul>
+      <li>Developed and maintained company websites</li>
+      <li>Collaborated with design teams to create responsive UI</li>
+      <li>Optimized websites for speed and SEO</li>
+    </ul>
   </section>
 
   <hr>
@@ -69,7 +57,7 @@
   <!-- Skills -->
   <section id="skills" class="container">
     <h2>Skills</h2>
-    <ul class="skills-list">
+    <ul>
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
@@ -81,51 +69,43 @@
 
   <hr>
 
-  <!-- Contact + Form -->
+  <!-- Contact -->
   <section id="contact" class="container">
     <h2>Contact Information</h2>
+    <p>Email: <a href="mailto:haphamquang427@gmail.com">haphamquang427@gmail.com</a></p>
+    <p>Phone: (123) 456-7890</p>
+    <p>LinkedIn: <a href="#">linkedin.com/in/haphamquang</a></p>
+    <p>GitHub: <a href="https://github.com/haphamquang427-pixel">github.com/haphamquang427-pixel</a></p>
+  </section>
 
-    <div class="contact-grid">
-      <div class="contact-details">
-        <p><strong>Email:</strong> john.doe@email.com</p>
-        <p><strong>Phone:</strong> (123) 456-7890</p>
-        <p><strong>LinkedIn:</strong> linkedin.com/in/johndoe</p>
-        <p><strong>GitHub:</strong> github.com/johndoe</p>
-      </div>
+  <hr>
 
-      <!-- FORM: đổi action nếu dùng dịch vụ gửi form -->
-      <form class="contact-form" action="#" method="post" novalidate>
-        <h3>Send me a message</h3>
+  <!-- Contact Form -->
+  <section id="contact-form" class="container">
+    <h2>Contact Form</h2>
+    <p>If you want to get in touch, please fill out the form below:</p>
 
-        <label for="name">Full name</label>
-        <input id="name" name="name" type="text" placeholder="Your name" required>
+    <form action="#" method="post">
+      <label for="name">Full Name:</label><br>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
 
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" placeholder="you@example.com" required>
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
 
-        <label for="phone">Phone</label>
-        <input id="phone" name="phone" type="tel" placeholder="+84 9xx xxx xxx">
+      <label for="subject">Subject:</label><br>
+      <input type="text" id="subject" name="subject" placeholder="Subject of your message" required><br><br>
 
-        <label for="subject">Subject</label>
-        <input id="subject" name="subject" type="text" placeholder="Subject">
+      <label for="message">Message:</label><br>
+      <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea><br><br>
 
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="5" placeholder="Write your message..." required></textarea>
-
-        <div class="form-row">
-          <button type="submit" class="btn">Send Message</button>
-          <button type="reset" class="btn btn-secondary">Reset</button>
-        </div>
-
-        <p class="form-note">* Your details will not be shared. This is a demo form.</p>
-      </form>
-    </div>
+      <input type="submit" value="Send Message">
+    </form>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 John Doe. All rights reserved.</p>
-    <p>Created using HTML and CSS.</p>
+    <p>&copy; 2025 Phạm Quang Hà. All rights reserved.</p>
+    <p>Created using basic HTML and CSS.</p>
   </footer>
 
 </body>
