--- a/week8/ex1.html
+++ b/week8/ex1.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Sum of Two Numbers</title>
-  <script>
-    function calculateSum() {
-      let a = prompt("Enter the first number:");
-      let b = prompt("Enter the second number:");
-
-      // Kiểm tra xem người dùng có nhập đúng số không
-      if (isNaN(a) || isNaN(b) || a === "" || b === "") {
-        alert("❌ Error: Please enter valid numbers!");
-      } else {
-        let sum = parseFloat(a) + parseFloat(b);
-        alert("✅ The sum of two numbers is: " + sum);
-      }
-    }
-  </script>
+<title>Variable declaration and using message boxes</title>
+<script type="text/javascript">
+var a,b,c;
+a=prompt("Enter a:");
+b=prompt("Enter b:");
+c=parseInt(a)+parseInt(b);
+alert("Sum of a and b is: "+c);
+</script>
 </head>
-<body onload="calculateSum()">
-  <h2>Exercise 1: Sum of Two Numbers</h2>
-  <p>Open the page and input two numbers to see the result.</p>
+<body>
+<h2>Exercise 1: Variable declaration and using message boxes</h2>
 </body>
 </html>
