--- a/week8/ex3.html
+++ b/week8/ex3.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Days in a Month</title>
-  <script>
-    function checkDays() {
-      let month = parseInt(prompt("Enter month number (1-12):"));
-      let year = parseInt(prompt("Enter year:"));
-      let days;
-
-      switch (month) {
-        case 1: case 3: case 5: case 7: case 8: case 10: case 12:
-          days = 31;
-          break;
-        case 4: case 6: case 9: case 11:
-          days = 30;
-          break;
-        case 2:
-          // kiểm tra năm nhuận
-          if ((year % 4 === 0 && year % 100 !== 0) || year % 400 === 0)
-            days = 29;
-          else
-            days = 28;
-          break;
-        default:
-          days = "Invalid month!";
-      }
-
-      alert("This month has " + days + " days.");
-    }
-  </script>
+<title>Using switch statement</title>
+<script type="text/javascript">
+var month, days;
+month=parseInt(prompt("Enter month number (1-12):"));
+switch(month)
+{
+case 1:
+case 3:
+case 5:
+case 7:
+case 8:
+case 10:
+case 12:
+    days=31;
+    break;
+case 4:
+case 6:
+case 9:
+case 11:
+    days=30;
+    break;
+case 2:
+    days=28;
+    break;
+default:
+    days="Invalid month!";
+}
+alert("This month has "+days+" days.");
+</script>
 </head>
-<body onload="checkDays()">
-  <h2>Exercise 3: Days in a Month</h2>
+<body>
+<h2>Exercise 3: Using switch statement</h2>
 </body>
 </html>
