--- a/week11/ex1.html
+++ b/week11/ex1.html
@@ -70,3 +70,19 @@
 
 </body>
 </html>
+<!-- 
+ĐỀ BÀI:
+Exercise 1: Create a user registration form with these requirements:
+1. Include these fields:
+o Username (text input)
+o Password (password input)
+o Profile Picture (file input)
+2. Add validation rules:
+o Username must be 5-15 characters
+o Password must contain numbers and letters
+o Image file must be JPG or PNG
+3. Style form with Flexbox layout
+4. Add password strength indicator that:
+o Shows weak/medium/strong based on password
+o Updates in real-time as user types
+-->
